kubia-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - kubia.example.com
    secretName: tls-secret 
  rules:
  - host: kubia.example.com
    http: 
      paths:
      - path: /
        backend:
          serviceName: kubia-nodeport
          servicePort: 80
